Proje Davet Gonderme ve Onaylama Islemleri Hazirlandi